external-crates/move/crates/move-compiler/tests/development/signed_ints/signed_int_comparison.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_comparison.move:4:16
  │
4 │         let a: i64 = 10i64;
  │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_comparison.move:4:22
  │
4 │         let a: i64 = 10i64;
  │                      ^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_comparison.move:5:16
  │
5 │         let b: i64 = 5i64;
  │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_comparison.move:5:22
  │
5 │         let b: i64 = 5i64;
  │                      ^^^^ Signed integer types are under development
